# molecule

./: .travis.yml  Cargo.toml  Makefile  README.md  bors.toml
.github/workflows/: ci.yaml  release.yaml
bindings/c/include/: molecule.h  molecule_builder.h  molecule_reader.h
bindings/rust/: Cargo.toml
bindings/rust/src/: bytes.rs  error.rs  hex.rs  io.rs  lazy_reader.rs  lib.rs  prelude.rs  primitive.rs
docs/: encoding_spec.md  molecule_api.md  real_world_examples.md  schema_language.md  tutorial.md
docs/grammar/: grammar.ebnf
docs/schemas/: attributes.mol  roles.mol  skills.mol
docs/schemas/common/: basic_types.mol
examples/ci-tests/: .gitignore  Cargo.toml  Makefile  build.rs
examples/ci-tests/c/: ci_test_build.c  ci_test_simple.c  ci_tests.h  simple-example.c  test-build-default.c  tests-utils.h
examples/ci-tests/schemas/: ci_tests.mol
examples/ci-tests/schemas/import/a/: a.mol
examples/ci-tests/schemas/import/b/: b.mol  test.mol
examples/ci-tests/schemas/import/b/bb/: bb.mol
examples/ci-tests/schemas/import/b/bc/: bc.mol
examples/ci-tests/schemas/import/c/: c.mol
examples/ci-tests/schemas/import/c/cc/: cc.mol
examples/ci-tests/scripts/: generate_c  test-import-gen-code  test-mixed
examples/ci-tests/src/: capi.c  capi.rs  lib.rs  main.rs  simple-example.rs
examples/ci-tests/tests/: build.rs  compatibility.rs  default.rs  proptest.rs  simple.rs  strict_table.rs
examples/lazy-reader-tests/: Cargo.toml  Makefile  build.rs
examples/lazy-reader-tests/fuzz/: .gitignore  Cargo.toml  Makefile  rust-toolchain
examples/lazy-reader-tests/fuzz/fuzz_targets/: fuzz_target_1.rs
examples/lazy-reader-tests/src/: lib.rs  types.rs  types_all_data.rs  types_api.rs  types_api2.rs  types_api2_mol2.rs  types_array.rs  types_moleculec_check.rs  types_option.rs  types_struct.rs  types_table.rs  types_vec.rs
examples/nostd-tests/: .gitignore  Cargo.toml  Makefile  build.rs
examples/nostd-tests/src/: lib.rs
examples/tests-loader/: Cargo.toml
examples/tests-loader/src/: bytes.rs  lib.rs  types.rs
examples/tests-loader/src/generators/: c.rs  mod.rs  rust.rs
examples/tests-utils/: Cargo.toml
examples/tests-utils-c/: Cargo.toml
examples/tests-utils-c/src/: main.rs
examples/tests-utils-rust/: Cargo.toml
examples/tests-utils-rust/src/: lib.rs
examples/tests-utils/src/: bytes.rs  generator.rs  lib.rs  types.rs
fuzzing/c/: .gitignore  Makefile  README.md  coverage.c  definitions.h  definitions.mol  fuzzer.c  fuzzer_func.h  manually-gen.c
fuzzing/rust/: .gitignore  Cargo.toml  README.md
fuzzing/rust/fuzz/: Cargo.toml
fuzzing/rust/fuzz/fuzz_targets/: data.rs
fuzzing/rust/src/: definitions.rs  lib.rs
grammar/: grammar.ebnf
std/rust/: Cargo.toml  build.rs
std/rust/src/: lib.rs  primitives_pack.rs
test/schemas/: types.mol
test/vectors/: default.yaml  simple.yaml
tests/: Cargo.toml  build.rs  union_foo_0_7_3.mol  union_foo_with_custom_id.mol
tests/src/: main.rs  union_compatibility_test.rs
tools/codegen/: Cargo.toml  primitive_types.mol
tools/codegen/src/: compiler.rs  grammar.pest  lib.rs  utils.rs
tools/codegen/src/ast/: mod.rs  raw.rs  verified.rs
tools/codegen/src/ast/raw/: mod.rs  utils.rs
tools/codegen/src/ast/verified/: complete.rs  default_content.rs  has_name.rs  mod.rs  recover.rs
tools/codegen/src/generator/: lang_c.rs  lang_rust.rs  mod.rs
tools/codegen/src/generator/lang_rust/: builder.rs  common.rs  core.rs  getter.rs  mod.rs  utilities.rs
tools/codegen/src/generator/languages/: mod.rs
tools/codegen/src/generator/languages/c/: builder.rs  import.rs  mod.rs  reader.rs  utilities.rs
tools/codegen/src/generator/languages/go/: builder.rs  generator.rs  mod.rs  union.rs
tools/codegen/src/generator/languages/rust/: constants.rs  display.rs  enumerator.rs  generator.rs  getters.rs  import.rs  iterator.rs  mod.rs  properties.rs  utilities.rs
tools/codegen/src/generator/languages/rust/builder/: definition.rs  implementation.rs  mod.rs  setters.rs
tools/codegen/src/generator/languages/rust/entity/: implementation.rs  mod.rs
tools/codegen/src/generator/languages/rust/reader/: implementation.rs  mod.rs
tools/codegen/src/generator/languages/rust_lazy_reader/: generator.rs  mod.rs
tools/codegen/src/ir/: format.rs  from_ast.rs  mod.rs
tools/codegen/src/parser/: inner.rs  mod.rs
tools/compiler/: Cargo.toml
tools/compiler/src/: cli.yaml  compiler-c.rs  compiler-rust-lazy-reader.rs  compiler-rust.rs  compiler.rs  config.rs  lib.rs  main.rs
tools/compiler/src/cli/: compiler-plugin.yaml  compiler.yaml
