[package]
name = "molecule"
version = "0.7.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Rust bindings for molecule."
homepage = "https://github.com/nervosnetwork/molecule"
repository = "https://github.com/nervosnetwork/molecule"
keywords = ["serialization"]
categories = ["encoding", "data-structures"]
license = "MIT"

[dependencies]
cfg-if = "1.0.0"
bytes = { version = "1.0.0", optional = true }
faster-hex = { version = "^0.6", optional = true }

[features]
default = ["std"]
std = ["bytes", "faster-hex"]

[badges]
maintenance = { status = "experimental" }
