[package]
name = "molecule-ci-tests"
version = "0.4.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[[bin]]
name = "simple-example"
path = "src/simple-example.rs"

[dependencies]
molecule = { path = "../../bindings/rust", default-features = false }

[build-dependencies]
codegen = { package ="molecule-codegen", path = "../../tools/codegen" }

[dev-dependencies]
molecule-tests-utils = { path = "../tests-utils" }
slices = "~0.1"

[features]
default = ["std"]
std = ["molecule/std"]
