[package]
name = "molecule-ci-tests"
version = "0.7.2"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[[bin]]
name = "simple-example"
path = "src/simple-example.rs"

[dependencies]
molecule = { path = "../../bindings/rust", default-features = false }

[build-dependencies]
codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
cc = "1.0.66"

[dev-dependencies]
molecule-tests-utils-rust = { path = "../tests-utils-rust" }
slices = "0.1.1"
proptest = "0.10.1"

[features]
default = ["std"]
std = ["molecule/std"]
