[package]
name = "lazy-reader-tests"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = { path = "../../bindings/rust", default-features = false }
lazy_static = "1.4.0"
rand = "0.8.5"

[build-dependencies]
codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
cc = "1.0.66"
