[package]
name = "molecule-nostd-tests"
version = "0.4.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
molecule = { path = "../../bindings/rust", default-features = false }

[build-dependencies]
codegen = { package ="molecule-codegen", path = "../../tools/codegen" }

[dev-dependencies]
slices = "~0.1"
