[package]
name = "molecule-tests-loader"
version = "0.6.1"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
syn = "~1.0"
quote = "~1.0"
proc-macro2 = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
faster-hex = "~0.4"
property = "~0.3"
