[package]
name = "molecule-tests-loader"
version = "0.7.2"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
syn = "1.0.58"
quote = "1.0.8"
proc-macro2 = "1.0.24"
serde = { version = "1.0.118", features = ["derive"] }
faster-hex = "0.4.1"
property = "0.3.3"
