[package]
name = "molecule-tests-utils-rust"
version = "0.7.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
codegen = { package ="molecule-codegen", path = "../../tools/codegen" }
tests-loader = { package ="molecule-tests-loader", path = "../tests-loader" }
syn = "1.0.58"
quote = "1.0.8"
proc-macro2 = "1.0.24"
serde_yaml = "0.8.15"
