[package]
name = "molecule-codegen"
version = "0.5.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Code generator for molecule."
homepage = "https://github.com/nervosnetwork/molecule"
repository = "https://github.com/nervosnetwork/molecule"
keywords = ["molecule", "code-generation", "serialization"]
categories = [
    "parser-implementations",
    "development-tools::build-utils",
    "encoding",
    "data-structures"
]
license = "MIT"

[dependencies]
molecule = { version = "=0.5.0", path = "../../bindings/rust", default-features = false }
property = "~0.3"
pest = "~2.1"
pest_derive = "~2.1"
quote = "~1.0"
proc-macro2 = "~1.0"
case = "~1.0"
same-file = "~1.0"
semver = "~0.9"
serde = { version = "~1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "~1.0", optional = true }
serde_yaml = { version = "~0.8", optional = true }

[features]
default = []
compiler-plugin = ["serde", "serde_json", "serde_yaml"]

[badges]
maintenance = { status = "experimental" }
