[package]
name = "molecule-codegen"
version = "0.7.4"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Code generator for molecule."
homepage = "https://github.com/nervosnetwork/molecule"
repository = "https://github.com/nervosnetwork/molecule"
keywords = ["molecule", "code-generation", "serialization"]
categories = [
    "parser-implementations",
    "development-tools::build-utils",
    "encoding",
    "data-structures"
]
license = "MIT"

[dependencies]
molecule = { version = "=0.7.4", path = "../../bindings/rust", default-features = false }
property = "0.3.3"
pest = "2.1.3"
pest_derive = "2.1.0"
quote = "1.0.8"
proc-macro2 = "1.0.24"
case = "1.0.0"
same-file = "1.0.6"
semver = "0.11.0"
serde = { version = "1.0.118", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.61", optional = true }
serde_yaml = { version = "0.8.15", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
compiler-plugin = ["serde", "serde_json", "serde_yaml"]

[badges]
maintenance = { status = "experimental" }
