[package]
name = "moleculec"
version = "0.2.4"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Schema compiler for molecule."
homepage = "https://github.com/yangby-cryptape/molecule"
repository = "https://github.com/yangby-cryptape/molecule"
keywords = ["molecule", "code-generation", "serialization"]
categories = [
    "parser-implementations",
    "development-tools",
    "encoding",
    "data-structures"
]
license = "MIT"

[dependencies]
clap = { version = "~2.33", features = ["yaml"] }

[dependencies.codegen]
package ="molecule-codegen"
version = "=0.2.4"
path = "../codegen"

[badges]
maintenance = { status = "experimental" }
