[package]
name = "moleculec"
version = "0.6.0"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
description = "Schema compiler for molecule."
homepage = "https://github.com/nervosnetwork/molecule"
repository = "https://github.com/nervosnetwork/molecule"
keywords = ["molecule", "code-generation", "serialization"]
categories = [
    "parser-implementations",
    "development-tools",
    "encoding",
    "data-structures"
]
license = "MIT"

[[bin]]
name = "moleculec"
path = "src/compiler.rs"

[[bin]]
name = "moleculec-c"
path = "src/compiler-c.rs"

[[bin]]
name = "moleculec-rust"
path = "src/compiler-rust.rs"

[dependencies]
clap = { version = "~2.33", features = ["yaml"] }
which = "~3.1"
molecule-codegen = { version = "=0.6.0", path = "../codegen", features = ["compiler-plugin"] }

[badges]
maintenance = { status = "experimental" }
